--- a/client/src/index.css
+++ b/client/src/index.css
@@ -286,6 +286,12 @@ button:disabled {
   }
 }
 
+.spinner-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .loading {
   width: 6rem;
   height: 6rem;
